# poc_cliente_servidor

./: README.md  pyproject.toml  setup.py
cliente/: cliente.py
servidor/: handlers.py  servidor.py
tests/: test_servidor.py
