[tool.poetry]
name = "poc_cliente_servidor"
version = "0.1.0"
description = "Prova de Conceito com Arquitetura Cliente-Servidor"
authors = ["Seu Nome <seuemail@exemplo.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
